Fix confusing message about the mining address

--- a/www/app/templates/help.hbs
+++ b/www/app/templates/help.hbs
@@ -4,10 +4,10 @@
   </div>
   <p class="lead">In order to mine on this pool you need to have an
     <a href="https://github.com/ethereum/webthree-umbrella/releases" rel="nofollow" target="_blank">ethminer</a> installation
-    pointed to<br/><code>{{config.HttpHost}}:{{config.HttpPort}}/YOUR_ETH_ADDRESS/RIG_ID</code>
+    pointed to<br/><code>{{config.HttpHost}}:{{config.HttpPort}}/YOUR_HBC_ADDRESS/RIG_ID</code>
   </p>
   <dl class="dl-horizontal">
-    <dt>YOUR_ETH_ADDRESS</dt>
+    <dt>YOUR_HBC_ADDRESS</dt>
     <dd>This is your address for payouts, generate one with ghbc, or mine directly to exchange like
       <a href="http://poloniex.com" rel="nofollow" target="_blank">Poloniex</a>
       or <a href="http://bittrex.com" rel="nofollow" target="_blank">Bittrex</a>.<br/>
