--- a/www/app/templates/application.hbs
+++ b/www/app/templates/application.hbs
@@ -32,7 +32,7 @@
         {{/active-li}}
         {{#active-li currentWhen='payments'}}
           {{#link-to 'payments'}}
-            <i class="fa fa-paper-plane-o"></i> Payments
+            <i class="far fa-paper-plane"></i> Payments
           {{/link-to}}
         {{/active-li}}
         {{#active-li currentWhen='miners'}}
