--- a/www/app/templates/index.hbs
+++ b/www/app/templates/index.hbs
@@ -7,7 +7,7 @@
         </h1>
         <strong>Min. payout threshold: {{config.PayoutThreshold}}</strong>, Payouts run each 2 hours.<br/>
         <span class="label label-success">PROP</span> Stable and profitable pool with regular payouts.
-        Weekly message: Thanks miners with this start! Keep it mining, grow up together us!
+        Weekly message: We are now in the first exchange <a target="_blank" href="https://stocks.exchange/trade/HBF/LTC">Buy/Sell HBF</a>
       </div>
       <div class="col-md-3 stats">
         <div><i class="fa fa-users"></i> Miners Online: <span id="poolHashrate">{{format-number stats.model.minersTotal}}</span></div>
